[gd_scene load_steps=3 format=2]

[ext_resource path="res://bgm/smb-overworld.mp3" type="AudioStream" id=1]
[ext_resource path="res://system.gd" type="Script" id=2]

[node name="System" type="Node2D"]
script = ExtResource( 2 )

[node name="Bgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="DeadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RebornTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DeadTimer" to="." method="_on_DeadTimer_timeout"]
[connection signal="timeout" from="RebornTimer" to="." method="_on_RebornTimer_timeout"]
